--- a/package.json
+++ b/package.json
@@ -10,16 +10,25 @@
   },
   "dependencies": {
     "@ap.cx/react-fullpage": "^0.3.0",
-    "@fullpage/react-fullpage": "^0.1.34",
+    "@fullpage/react-fullpage": "^0.1.36",
     "@react-icons/all-files": "^4.1.0",
+    "@sendgrid/mail": "^7.7.0",
+    "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "connect": "^3.7.0",
     "mdb-react-ui-kit": "^5.1.0",
     "mdb-ui-kit": "^6.2.0",
-    "next": "13.2.1",
+    "mongoose": "^7.0.1",
+    "mysql": "^2.18.1",
+    "next": "^13.2.1",
+    "next-connect": "^0.13.0",
+    "nodemailer": "^6.9.1",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.2",
+    "react-data-table-component": "^7.5.3",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-router-dom": "^6.9.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
   }
