--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   },
   "dependencies": {
     "@ap.cx/react-fullpage": "^0.3.0",
-    "@fullpage/react-fullpage": "^0.1.36",
+    "@fullpage/react-fullpage": "^0.1.37",
     "@react-icons/all-files": "^4.1.0",
     "@sendgrid/mail": "^7.7.0",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "connect": "^3.7.0",
+    "jquery": "^3.6.4",
     "mdb-react-ui-kit": "^5.1.0",
     "mdb-ui-kit": "^6.2.0",
     "mongoose": "^7.0.1",
@@ -27,8 +28,10 @@
     "react-bootstrap": "^2.7.2",
     "react-data-table-component": "^7.5.3",
     "react-dom": "18.2.0",
+    "react-fullpage": "^0.1.16",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.9.0",
+    "react-scroll": "^1.8.9",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
   }
